<resources>
    <string name="app_name">A8</string>
    
    <string name="billAmount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="splitBill">Split Bill?</string>
    <string name="perPerson">Per Person</string>
    <string name="label_tip_summary">Tip Summary</string>

    <string name="text_centimeters">centimeters</string>
    <string name="text_meters">meters</string>
    <string name="text_feet">feet</string>
    <string name="text_miles">miles</string>
    <string name="text_kilometers">kilometers</string>
    <string name="text_from">From:</string>
    <string name="text_to">To:</string>
    <string name="text_convert">CONVERT</string>
    <string name="text_result">Result:</string>

    <string name="usd">USD</string>
    <string name="yuan">Yuan</string>
    <string name="euro">Euro</string>

    <string name="button_tip">TIP CALC</string>
    <string name="button_units">UNIT CONV</string>
    <string name="button_money">MONEY EXCH</string>
</resources>
